# rusty-browser

./: Cargo.toml  README.md
.github/workflows/: rust.yml
html/: Cargo.toml
html/examples/: test1.html  test1.rs  wikipedia.rs
html/src/: dom.rs  html.pest  lib.rs  node.rs  parser.rs  prelude.rs
src/: error.rs  lib.rs  main.rs
web/: Cargo.toml
web/src/: bundle.rs  error.rs  layout.rs  lib.rs  system.rs
